<resources>
    <string name="app_name">GST Calculator</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="decimal">.</string>
    <string name="multiply">×</string>
    <string name="divide">/</string>
    <string name="addition">+</string>
    <string name="subtraction">-</string>
    <string name="all_clear">AC</string>
    <string name="clear">C</string>
    <string name="equal">=</string>
    <string name="per3">+3%</string>
    <string name="per5">+5%</string>
    <string name="per12">+12%</string>
    <string name="per18">+18%</string>
    <string name="per28">+28%</string>
    <string name="min_per3">-3%</string>
    <string name="min_per5">-5%</string>
    <string name="min_per12">-12%</string>
    <string name="min_per18">-18%</string>
    <string name="min_per28">-28%</string>
</resources>