<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <!-- ScrollView for displaying input text, allowing vertical scrolling -->
    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/TxtResult"
        android:layout_alignParentEnd="true"
        android:fillViewport="true">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:id="@+id/TxtInput"
                android:layout_marginBottom="@dimen/dim_2"
                android:layout_marginEnd="@dimen/dim_4"
                android:text=""
                tools:ignore="VisualLintBounds,SpeakableTextPresentCheck" />
        </LinearLayout>
    </ScrollView>

    <!-- TextView for displaying results -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/TxtResult"
        android:layout_above="@+id/percentButton"
        android:layout_alignParentEnd="true"
        android:scrollbars="vertical"
        android:text=""
        android:autoSizeMaxTextSize="@dimen/font_size_28"
        android:autoSizeMinTextSize="@dimen/font_size_18"
        android:layout_marginBottom="@dimen/dim_2"
        android:layout_marginEnd="@dimen/dim_4"
        app:autoSizeTextType="uniform"
        tools:ignore="VisualLintBounds,SpeakableTextPresentCheck" />

    <!-- LinearLayout containing percentage buttons -->
    <LinearLayout
        android:id="@+id/percentButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/roundButtons"
        android:orientation="vertical">

        <!-- Row of percentage buttons -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn3Perc"
                style="@style/percentageButton"
                android:text="@string/per3" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn5Perc"
                style="@style/percentageButton"
                android:text="@string/per5" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn12Perc"
                style="@style/percentageButton"
                android:text="@string/per12"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn18Perc"
                style="@style/percentageButton"
                android:text="@string/per18"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn28Perc"
                style="@style/percentageButton"
                android:text="@string/per28"/>

        </LinearLayout>

        <!-- Row of minimum percentage buttons -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnMin3Perc"
                style="@style/percentageButton"
                android:text="@string/min_per3" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnMin5Perc"
                style="@style/percentageButton"
                android:text="@string/min_per5" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnMin12Perc"
                style="@style/percentageButton"
                android:text="@string/min_per12" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnMin18Perc"
                style="@style/percentageButton"
                android:text="@string/min_per18"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnMin28Perc"
                style="@style/percentageButton"
                android:text="@string/min_per28" />
        </LinearLayout>
    </LinearLayout>

    <!-- LinearLayout containing calculator buttons -->
    <LinearLayout
        android:background="@color/transparent"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/roundButtons"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal">

        <!-- Layout for digit buttons and operator buttons -->
        <LinearLayout
            android:background="@color/transparent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Column of digit and operator buttons -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnAllClear"
                        style="@style/operatorButton"
                        android:text="@string/all_clear" />
                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnSeven"
                        style="@style/digitButton"
                        android:text="@string/seven" />
                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnFour"
                        style="@style/digitButton"
                        android:text="@string/four" />
                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnOne"
                        style="@style/digitButton"
                        android:text="@string/one" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnDivide"
                        style="@style/operatorButton"
                        android:text="@string/divide" />
                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnEight"
                        style="@style/digitButton"
                        android:text="@string/eight" />
                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnFive"
                        style="@style/digitButton"
                        android:text="@string/five" />
                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnTwo"
                        style="@style/digitButton"
                        android:text="@string/two" />
                </LinearLayout>
            </LinearLayout>

            <!-- Button for zero -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnZero"
                style="@style/digitButton"
                android:text="@string/zero"
                android:layout_width="@dimen/dim_124" />
        </LinearLayout>

        <!-- Column of operator buttons -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnMultiply"
                style="@style/operatorButton"
                android:textSize="@dimen/font_size_26"
                android:text="@string/multiply" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnNine"
                style="@style/digitButton"
                android:text="@string/nine" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSix"
                style="@style/digitButton"
                android:text="@string/six" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnThree"
                style="@style/digitButton"
                android:text="@string/three" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnDecimal"
                style="@style/digitButton"
                android:text="@string/decimal" />
        </LinearLayout>

        <!-- Column of additional operator buttons -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnClear"
                style="@style/operatorButton"
                android:text="@string/clear" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSubtract"
                android:textSize="@dimen/font_size_26"
                style="@style/operatorButton"
                android:text="@string/subtraction" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnAddition"
                style="@style/operatorButton"
                android:text="@string/addition" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnEqual"
                style="@style/operatorButton"
                android:layout_height="@dimen/dim_125"
                android:text="@string/equal"
                android:textColor="@color/white"
                android:backgroundTint="@color/blue" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
